bug squashed - scroll modal now closes correctly

--- a/pattern-lab/source/_patterns/00-ui-kit/22-modal/_modal.scss
+++ b/pattern-lab/source/_patterns/00-ui-kit/22-modal/_modal.scss
@@ -63,6 +63,7 @@
     }
     .content {
       padding-top:20px;
+      border-top: 1px solid $neutral;
       @media(min-width:640px) {
         max-height:500px;
         overflow: auto;
