--- a/pattern-lab/source/css/pattern-scaffolding.css
+++ b/pattern-lab/source/css/pattern-scaffolding.css
@@ -4,7 +4,8 @@
  * These styles will not be your production CSS.
  */
 #sg-patterns {
-  box-sizing: border-box !important;
+  -webkit-box-sizing: border-box !important;
+          box-sizing: border-box !important;
   max-width: 100%;
   padding: 0 0.5em;
 }
